2010-07-08  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Rob Buis & Dirk Schulze.

        SVG text transformed incorrectly when a transform and gradient applied
        https://bugs.webkit.org/show_bug.cgi?id=41563

        When rendering filled/stroked text with a gradient, RenderSVGResourceGradient creates a mask image,
        renders the text into the image, and then clips the current context against that image buffer,
        and filling a rect afterwards. This happened in the wrong coordinate space so far. Don't actually
        try to compute the right transformation matrix (which failed), but extract it directly from the
        GraphicsContext and apply this transformation to the mask image context.

        Fixes pixellation in svg/batik/text/textEffect3.svg and makes the new test svg/custom/text-rotated-gradient.svg pass.
        Only affects CoreGraphics platforms.

        Test: svg/custom/text-rotated-gradient.svg

        * rendering/RenderSVGResourceGradient.cpp:
        (WebCore::absoluteTransformFromContext):
        (WebCore::createMaskAndSwapContextForTextGradient):
        (WebCore::clipToTextMask):

2010-07-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Rob Buis & Dirk Schulze.

        SVG text transformed incorrectly when a transform and gradient applied
        https://bugs.webkit.org/show_bug.cgi?id=41563

        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.checksum:
        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.png:
        * platform/mac/svg/custom/text-rotated-gradient-expected.checksum: Added.
        * platform/mac/svg/custom/text-rotated-gradient-expected.png: Added.
        * platform/mac/svg/custom/text-rotated-gradient-expected.txt: Added.
        * svg/custom/text-rotated-gradient.svg: Added.
        * platform/mac/svg/batik/text/textEffect3-expected.checksum: No more pixellation, text completely fixed.
        * platform/mac/svg/batik/text/textEffect3-expected.png: Ditto.
        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.checksum: Marginal differences, only visible in diffs image.
        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.png: Ditto.
        * platform/mac/svg/custom/text-rotated-gradient-expected.checksum: Added.
        * platform/mac/svg/custom/text-rotated-gradient-expected.png: Added.
        * platform/mac/svg/custom/text-rotated-gradient-expected.txt: Added.
        * platform/mac/svg/text/selection-background-color-expected.checksum: Marginal differences, only visible in diffs image.
        * platform/mac/svg/text/selection-background-color-expected.png: Ditto.
        * svg/custom/text-rotated-gradient.svg: Added.


Canonical link: https://commits.webkit.org/53671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62776 268f45cc-cd09-0410-ab3c-d52691b4dbfc